Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.00.01

              pamtojpeg2k: add -size option.  Doesn't precisely work (and
              -compression has never worked precisely either); should be
              fixed some day.

              fitstopnm: fix invalid memory reference (nonterminated ASCIIZ
              string).

22.09.28 BJH  Release 11.00.00

              (No significance to new major number; just ran out of 2-digit
              minor numbers).

              Add pamcat.

              pamtable: add -tuple.

              pamtable: add -hex.

              pbmtextps: improve error messages.

              pnmtofits: fix arbitrary behavior when FITS input lacks
              required fields in header.  Always broken.  Pnmtofits'
              predecessor was in primordial Netpbm (1989).

              ppmtoicr: Fix bug: all options cause bogus command line parsing
              errors.  Always broken.  Ppmtoicr was new in 1991.

              ppmtoicr: Fix arithmetic overflows.

              ppmtoicr: make -rle option issue an error message saying it no
              longer exists (it did, sort of, before 2015).

              ppmforge: Fix arbitrary output with really large -power.
              
              pnmindex: fix shell injection vulnerabilities.  Broken since
              Netpbm 10.28 (June 2005).

              pnmmargin: fix shell injection vulnerability.  Always broken
              (Program was added in primordial Netpbm in 1990).

              build: Create backward compatibility symbolic link for
              pnminterp-gen, missing for over 20 years.

22.06.24 BJH  Release 10.99.00

              Add pamrestack.

              Add pamshuffle.

              Add pamtoqoi, qoitopam.

              palmtopnm: Fix failure with bogus claim of invalid input on
              architectures that do not use two's complement negative numbers.