@@ -13,6 +13,10 @@ not yet  BJH  Release 11.00.01
               fitstopnm: fix invalid memory reference (nonterminated ASCIIZ
               string).
 
+              packaging: Fix library minor number to 100 + Netpbm minor number
+              so it is higher than previous ones in library major 100.
+              I.e. libnetpbm.so.100.101 instead of libnetpbm.so.100.1.
+
 22.09.28 BJH  Release 11.00.00
 
               (No significance to new major number; just ran out of 2-digit
